// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scenario: delayed message annotations in onFinish > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "annotations": [
        {
          "example": "annotation",
        },
      ],
      "content": "text",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "text",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 5,
      "promptTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`scenario: delayed message annotations in onFinish > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "text",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "text",
          "type": "text",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        {
          "example": "annotation",
        },
      ],
      "content": "text",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "text",
          "type": "text",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: message annotations in onChunk > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "annotations": [
        "annotation1",
        "annotation2",
      ],
      "content": "t1t2",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "t1t2",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 5,
      "promptTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`scenario: message annotations in onChunk > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation1",
      ],
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation1",
      ],
      "content": "t1",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "t1",
          "type": "text",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation1",
        "annotation2",
      ],
      "content": "t1",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "t1",
          "type": "text",
        },
      ],
      "revisionId": "id-3",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation1",
        "annotation2",
      ],
      "content": "t1t2",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "t1t2",
          "type": "text",
        },
      ],
      "revisionId": "id-4",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: message annotations with existing assistant lastMessage > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "annotations": [
        "annotation0",
        "annotation1",
      ],
      "content": "t1",
      "createdAt": 2023-01-02T00:00:00.000Z,
      "id": "original-id",
      "parts": [
        {
          "text": "t1",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 5,
      "promptTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`scenario: message annotations with existing assistant lastMessage > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation0",
        "annotation1",
      ],
      "content": "",
      "createdAt": 2023-01-02T00:00:00.000Z,
      "id": "original-id",
      "parts": [],
      "revisionId": "id-0",
      "role": "assistant",
    },
    "replaceLastMessage": true,
  },
  {
    "data": [],
    "message": {
      "annotations": [
        "annotation0",
        "annotation1",
      ],
      "content": "t1",
      "createdAt": 2023-01-02T00:00:00.000Z,
      "id": "original-id",
      "parts": [
        {
          "text": "t1",
          "type": "text",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": true,
  },
]
`;

exports[`scenario: onToolCall is executed > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": "test-result",
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": "test-result",
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "usage": {
      "completionTokens": 5,
      "promptTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`scenario: onToolCall is executed > should call the update function twice with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "state": "call",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "state": "call",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": "test-result",
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": "test-result",
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: server provides file parts > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "Here is a file:And another one:",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "Here is a file:And another one:",
          "type": "text",
        },
        {
          "data": "Hello World",
          "mimeType": "text/plain",
          "type": "file",
        },
        {
          "data": "{"key": "value"}",
          "mimeType": "application/json",
          "type": "file",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 7,
      "promptTokens": 14,
      "totalTokens": 21,
    },
  },
]
`;

exports[`scenario: server provides file parts > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "Here is a file:",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "Here is a file:",
          "type": "text",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "Here is a file:",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "Here is a file:",
          "type": "text",
        },
        {
          "data": "Hello World",
          "mimeType": "text/plain",
          "type": "file",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "Here is a file:And another one:",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "Here is a file:And another one:",
          "type": "text",
        },
        {
          "data": "Hello World",
          "mimeType": "text/plain",
          "type": "file",
        },
      ],
      "revisionId": "id-3",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "Here is a file:And another one:",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "Here is a file:And another one:",
          "type": "text",
        },
        {
          "data": "Hello World",
          "mimeType": "text/plain",
          "type": "file",
        },
        {
          "data": "{"key": "value"}",
          "mimeType": "application/json",
          "type": "file",
        },
      ],
      "revisionId": "id-4",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: server provides message ids > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "Hello, world!",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "text": "Hello, world!",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 5,
      "promptTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`scenario: server provides message ids > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "Hello, ",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "text": "Hello, ",
          "type": "text",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "Hello, world!",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "text": "Hello, world!",
          "type": "text",
        },
      ],
      "revisionId": "id-3",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: server provides reasoning > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "Hi there!",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will open the conversation with witty banter. ",
              "type": "text",
            },
            {
              "data": "redacted-data",
              "type": "redacted",
            },
            {
              "signature": "abc123",
              "text": "Once the user has relaxed, I will pry for valuable information.",
              "type": "text",
            },
          ],
          "reasoning": "I will open the conversation with witty banter. Once the user has relaxed, I will pry for valuable information.",
          "type": "reasoning",
        },
        {
          "text": "Hi there!",
          "type": "text",
        },
      ],
      "reasoning": "I will open the conversation with witty banter. Once the user has relaxed, I will pry for valuable information.",
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 5,
      "promptTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`scenario: server provides reasoning > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "details": [
            {
              "text": "I will open the conversation",
              "type": "text",
            },
          ],
          "reasoning": "I will open the conversation",
          "type": "reasoning",
        },
      ],
      "reasoning": "I will open the conversation",
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "details": [
            {
              "text": "I will open the conversation with witty banter. ",
              "type": "text",
            },
          ],
          "reasoning": "I will open the conversation with witty banter. ",
          "type": "reasoning",
        },
      ],
      "reasoning": "I will open the conversation with witty banter. ",
      "revisionId": "id-3",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will open the conversation with witty banter. ",
              "type": "text",
            },
            {
              "data": "redacted-data",
              "type": "redacted",
            },
          ],
          "reasoning": "I will open the conversation with witty banter. ",
          "type": "reasoning",
        },
      ],
      "reasoning": "I will open the conversation with witty banter. ",
      "revisionId": "id-4",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will open the conversation with witty banter. ",
              "type": "text",
            },
            {
              "data": "redacted-data",
              "type": "redacted",
            },
            {
              "text": "Once the user has relaxed,",
              "type": "text",
            },
          ],
          "reasoning": "I will open the conversation with witty banter. Once the user has relaxed,",
          "type": "reasoning",
        },
      ],
      "reasoning": "I will open the conversation with witty banter. Once the user has relaxed,",
      "revisionId": "id-5",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will open the conversation with witty banter. ",
              "type": "text",
            },
            {
              "data": "redacted-data",
              "type": "redacted",
            },
            {
              "text": "Once the user has relaxed, I will pry for valuable information.",
              "type": "text",
            },
          ],
          "reasoning": "I will open the conversation with witty banter. Once the user has relaxed, I will pry for valuable information.",
          "type": "reasoning",
        },
      ],
      "reasoning": "I will open the conversation with witty banter. Once the user has relaxed, I will pry for valuable information.",
      "revisionId": "id-6",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "Hi there!",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "step_123",
      "parts": [
        {
          "type": "step-start",
        },
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will open the conversation with witty banter. ",
              "type": "text",
            },
            {
              "data": "redacted-data",
              "type": "redacted",
            },
            {
              "signature": "abc123",
              "text": "Once the user has relaxed, I will pry for valuable information.",
              "type": "text",
            },
          ],
          "reasoning": "I will open the conversation with witty banter. Once the user has relaxed, I will pry for valuable information.",
          "type": "reasoning",
        },
        {
          "text": "Hi there!",
          "type": "text",
        },
      ],
      "reasoning": "I will open the conversation with witty banter. Once the user has relaxed, I will pry for valuable information.",
      "revisionId": "id-7",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: server provides sources > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
        {
          "source": {
            "id": "source-id",
            "sourceType": "url",
            "title": "Example",
            "url": "https://example.com",
          },
          "type": "source",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 7,
      "promptTokens": 14,
      "totalTokens": 21,
    },
  },
]
`;

exports[`scenario: server provides sources > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
        {
          "source": {
            "id": "source-id",
            "sourceType": "url",
            "title": "Example",
            "url": "https://example.com",
          },
          "type": "source",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: server-side continue roundtrip > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 7,
      "promptTokens": 14,
      "totalTokens": 21,
    },
  },
]
`;

exports[`scenario: server-side continue roundtrip > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "The weather in London ",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "The weather in London ",
          "type": "text",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: server-side tool roundtrip > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "usage": {
      "completionTokens": 7,
      "promptTokens": 14,
      "totalTokens": 21,
    },
  },
]
`;

exports[`scenario: server-side tool roundtrip > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "state": "call",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "state": "call",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "revisionId": "id-3",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: server-side tool roundtrip with existing assistant message > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-02T00:00:00.000Z,
      "id": "original-id",
      "parts": [
        {
          "toolInvocation": {
            "args": {},
            "result": {
              "location": "Berlin",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id-original",
            "toolName": "tool-name-original",
          },
          "type": "tool-invocation",
        },
        {
          "type": "step-start",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 1,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {},
          "result": {
            "location": "Berlin",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id-original",
          "toolName": "tool-name-original",
        },
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 1,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "usage": {
      "completionTokens": 7,
      "promptTokens": 14,
      "totalTokens": 21,
    },
  },
]
`;

exports[`scenario: server-side tool roundtrip with existing assistant message > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-02T00:00:00.000Z,
      "id": "original-id",
      "parts": [
        {
          "toolInvocation": {
            "args": {},
            "result": {
              "location": "Berlin",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id-original",
            "toolName": "tool-name-original",
          },
          "type": "tool-invocation",
        },
        {
          "type": "step-start",
        },
      ],
      "revisionId": "id-0",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {},
          "result": {
            "location": "Berlin",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id-original",
          "toolName": "tool-name-original",
        },
      ],
    },
    "replaceLastMessage": true,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-02T00:00:00.000Z,
      "id": "original-id",
      "parts": [
        {
          "toolInvocation": {
            "args": {},
            "result": {
              "location": "Berlin",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id-original",
            "toolName": "tool-name-original",
          },
          "type": "tool-invocation",
        },
        {
          "type": "step-start",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "state": "call",
            "step": 1,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {},
          "result": {
            "location": "Berlin",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id-original",
          "toolName": "tool-name-original",
        },
        {
          "args": {
            "city": "London",
          },
          "state": "call",
          "step": 1,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": true,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-02T00:00:00.000Z,
      "id": "original-id",
      "parts": [
        {
          "toolInvocation": {
            "args": {},
            "result": {
              "location": "Berlin",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id-original",
            "toolName": "tool-name-original",
          },
          "type": "tool-invocation",
        },
        {
          "type": "step-start",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 1,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {},
          "result": {
            "location": "Berlin",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id-original",
          "toolName": "tool-name-original",
        },
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 1,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": true,
  },
  {
    "data": [],
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-02T00:00:00.000Z,
      "id": "original-id",
      "parts": [
        {
          "toolInvocation": {
            "args": {},
            "result": {
              "location": "Berlin",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id-original",
            "toolName": "tool-name-original",
          },
          "type": "tool-invocation",
        },
        {
          "type": "step-start",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 1,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "revisionId": "id-3",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {},
          "result": {
            "location": "Berlin",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id-original",
          "toolName": "tool-name-original",
        },
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 1,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": true,
  },
]
`;

exports[`scenario: server-side tool roundtrip with multiple assistant reasoning > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will use a tool to get the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I will use a tool to get the weather in London.",
          "type": "reasoning",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "details": [
            {
              "signature": "abc123",
              "text": "I know know the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I know know the weather in London.",
          "type": "reasoning",
        },
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "reasoning": "I will use a tool to get the weather in London.I know know the weather in London.",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "usage": {
      "completionTokens": 7,
      "promptTokens": 14,
      "totalTokens": 21,
    },
  },
]
`;

exports[`scenario: server-side tool roundtrip with multiple assistant reasoning > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "details": [
            {
              "text": "I will ",
              "type": "text",
            },
          ],
          "reasoning": "I will ",
          "type": "reasoning",
        },
      ],
      "reasoning": "I will ",
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "details": [
            {
              "text": "I will use a tool to get the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I will use a tool to get the weather in London.",
          "type": "reasoning",
        },
      ],
      "reasoning": "I will use a tool to get the weather in London.",
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will use a tool to get the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I will use a tool to get the weather in London.",
          "type": "reasoning",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "state": "call",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "reasoning": "I will use a tool to get the weather in London.",
      "revisionId": "id-3",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "state": "call",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will use a tool to get the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I will use a tool to get the weather in London.",
          "type": "reasoning",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "reasoning": "I will use a tool to get the weather in London.",
      "revisionId": "id-4",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will use a tool to get the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I will use a tool to get the weather in London.",
          "type": "reasoning",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "details": [
            {
              "text": "I know know the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I know know the weather in London.",
          "type": "reasoning",
        },
      ],
      "reasoning": "I will use a tool to get the weather in London.I know know the weather in London.",
      "revisionId": "id-5",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "details": [
            {
              "signature": "1234567890",
              "text": "I will use a tool to get the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I will use a tool to get the weather in London.",
          "type": "reasoning",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "details": [
            {
              "signature": "abc123",
              "text": "I know know the weather in London.",
              "type": "text",
            },
          ],
          "reasoning": "I know know the weather in London.",
          "type": "reasoning",
        },
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "reasoning": "I will use a tool to get the weather in London.I know know the weather in London.",
      "revisionId": "id-6",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: server-side tool roundtrip with multiple assistant texts > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "I will use a tool to get the weather in London.The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "I will use a tool to get the weather in London.",
          "type": "text",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "usage": {
      "completionTokens": 7,
      "promptTokens": 14,
      "totalTokens": 21,
    },
  },
]
`;

exports[`scenario: server-side tool roundtrip with multiple assistant texts > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "I will ",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "I will ",
          "type": "text",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "I will use a tool to get the weather in London.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "I will use a tool to get the weather in London.",
          "type": "text",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "I will use a tool to get the weather in London.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "I will use a tool to get the weather in London.",
          "type": "text",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "state": "call",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-3",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "state": "call",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "I will use a tool to get the weather in London.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "I will use a tool to get the weather in London.",
          "type": "text",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-4",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "I will use a tool to get the weather in London.The weather in London ",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "I will use a tool to get the weather in London.",
          "type": "text",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "text": "The weather in London ",
          "type": "text",
        },
      ],
      "revisionId": "id-5",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "I will use a tool to get the weather in London.The weather in London is sunny.",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "I will use a tool to get the weather in London.",
          "type": "text",
        },
        {
          "toolInvocation": {
            "args": {
              "city": "London",
            },
            "result": {
              "weather": "sunny",
            },
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-id",
            "toolName": "tool-name",
          },
          "type": "tool-invocation",
        },
        {
          "text": "The weather in London is sunny.",
          "type": "text",
        },
      ],
      "revisionId": "id-6",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "city": "London",
          },
          "result": {
            "weather": "sunny",
          },
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-id",
          "toolName": "tool-name",
        },
      ],
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: simple text response > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "Hello, world!",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "Hello, world!",
          "type": "text",
        },
      ],
      "role": "assistant",
    },
    "usage": {
      "completionTokens": 5,
      "promptTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`scenario: simple text response > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "Hello, ",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "Hello, ",
          "type": "text",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "Hello, world!",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "text": "Hello, world!",
          "type": "text",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
    },
    "replaceLastMessage": false,
  },
]
`;

exports[`scenario: tool call streaming > should call the onFinish function with the correct arguments 1`] = `
[
  {
    "finishReason": "stop",
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "testArg": "test-value",
            },
            "result": "test-result",
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-0",
            "toolName": "test-tool",
          },
          "type": "tool-invocation",
        },
      ],
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "testArg": "test-value",
          },
          "result": "test-result",
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-0",
          "toolName": "test-tool",
        },
      ],
    },
    "usage": {
      "completionTokens": 5,
      "promptTokens": 10,
      "totalTokens": 15,
    },
  },
]
`;

exports[`scenario: tool call streaming > should call the update function with the correct arguments 1`] = `
[
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": undefined,
            "state": "partial-call",
            "step": 0,
            "toolCallId": "tool-call-0",
            "toolName": "test-tool",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-1",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": undefined,
          "state": "partial-call",
          "step": 0,
          "toolCallId": "tool-call-0",
          "toolName": "test-tool",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "testArg": "t",
            },
            "state": "partial-call",
            "step": 0,
            "toolCallId": "tool-call-0",
            "toolName": "test-tool",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-2",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "testArg": "t",
          },
          "state": "partial-call",
          "step": 0,
          "toolCallId": "tool-call-0",
          "toolName": "test-tool",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "testArg": "test-value",
            },
            "state": "partial-call",
            "step": 0,
            "toolCallId": "tool-call-0",
            "toolName": "test-tool",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-3",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "testArg": "test-value",
          },
          "state": "partial-call",
          "step": 0,
          "toolCallId": "tool-call-0",
          "toolName": "test-tool",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "testArg": "test-value",
            },
            "state": "call",
            "step": 0,
            "toolCallId": "tool-call-0",
            "toolName": "test-tool",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-4",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "testArg": "test-value",
          },
          "state": "call",
          "step": 0,
          "toolCallId": "tool-call-0",
          "toolName": "test-tool",
        },
      ],
    },
    "replaceLastMessage": false,
  },
  {
    "data": [],
    "message": {
      "content": "",
      "createdAt": 2023-01-01T00:00:00.000Z,
      "id": "id-0",
      "parts": [
        {
          "toolInvocation": {
            "args": {
              "testArg": "test-value",
            },
            "result": "test-result",
            "state": "result",
            "step": 0,
            "toolCallId": "tool-call-0",
            "toolName": "test-tool",
          },
          "type": "tool-invocation",
        },
      ],
      "revisionId": "id-5",
      "role": "assistant",
      "toolInvocations": [
        {
          "args": {
            "testArg": "test-value",
          },
          "result": "test-result",
          "state": "result",
          "step": 0,
          "toolCallId": "tool-call-0",
          "toolName": "test-tool",
        },
      ],
    },
    "replaceLastMessage": false,
  },
]
`;
